[gd_scene load_steps=15 format=3 uid="uid://cmjkht7rropl6"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_qoo0f"]
[ext_resource type="PackedScene" uid="uid://cwdbh6tkjnd75" path="res://Nodes/transition.tscn" id="2_4matt"]
[ext_resource type="Texture2D" uid="uid://4452wvjvehuq" path="res://Logo.png" id="2_wa3s2"]
[ext_resource type="Script" path="res://Scripts/game_settings.gd" id="3_4564u"]
[ext_resource type="Script" path="res://Scripts/cafe_mode_settings.gd" id="3_domyd"]
[ext_resource type="Theme" uid="uid://hrjckykqfav7" path="res://Themes/Theme.tres" id="3_p3rro"]
[ext_resource type="PackedScene" uid="uid://c22x5jvpt4uec" path="res://Nodes/confirm_box.tscn" id="3_qs0y1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gyhud"]
bg_color = Color(0.141172, 0.206835, 0.354204, 1)

[sub_resource type="LabelSettings" id="LabelSettings_iff4t"]
font_size = 64

[sub_resource type="LabelSettings" id="LabelSettings_mumsv"]
font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_okrh3"]
font_size = 12

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssq4f"]
bg_color = Color(0.237539, 0.237539, 0.237539, 1)

[sub_resource type="Theme" id="Theme_sikj5"]
CheckButton/font_sizes/font_size = 12

[sub_resource type="LabelSettings" id="LabelSettings_gtnvp"]
font_size = 36

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_qoo0f")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gyhud")

[node name="Menu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -141.5
offset_top = 104.0
offset_right = 141.5
offset_bottom = 192.0
grow_horizontal = 2
text = "Pachink"
label_settings = SubResource("LabelSettings_iff4t")
horizontal_alignment = 1

[node name="Version" type="Label" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 128.0
offset_top = 160.0
offset_right = 187.0
offset_bottom = 183.0
grow_horizontal = 2
text = "Version"
label_settings = SubResource("LabelSettings_mumsv")
vertical_alignment = 1

[node name="Author" type="Label" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Jacob Ø. Andersen"
label_settings = SubResource("LabelSettings_okrh3")
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.5
offset_right = 75.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Quit")
focus_neighbor_bottom = NodePath("../Settings")
text = "Play"

[node name="Settings" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Play")
focus_neighbor_bottom = NodePath("../Quit")
text = "Settings"

[node name="Quit" type="Button" parent="CanvasLayer/Menu/VBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../Settings")
focus_neighbor_bottom = NodePath("../Play")
text = "Quit"

[node name="LinkButton" type="LinkButton" parent="CanvasLayer/Menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -112.0
offset_top = -72.0
offset_right = -32.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
underline = 2
uri = "https://pumpkin-dev.itch.io/"
metadata/_edit_group_ = true

[node name="Logo" type="TextureRect" parent="CanvasLayer/Menu/LinkButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -250.0
offset_right = 250.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.15, 0.15)
pivot_offset = Vector2(250, 250)
texture = ExtResource("2_wa3s2")

[node name="Settings" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 248.0
offset_top = 191.0
offset_right = -248.0
offset_bottom = -97.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ssq4f")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Settings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings/CenterContainer"]
layout_mode = 2

[node name="SetupPrizes" type="Button" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
focus_neighbor_bottom = NodePath("../CafeMode")
text = "Prizes"

[node name="CafeMode" type="CheckButton" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../Back")
focus_neighbor_bottom = NodePath("../HBoxContainer/FullscreenCheckBox")
theme = SubResource("Theme_sikj5")
text = "Friday café"
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../CafeMode")
focus_neighbor_bottom = NodePath("../../HBoxContainer2/BallSpamCheckBox")
flat = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Ball spam"

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
dragger_visibility = 1

[node name="BallSpamCheckBox" type="CheckBox" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../HBoxContainer/FullscreenCheckBox")
focus_neighbor_bottom = NodePath("../../Back")

[node name="Back" type="Button" parent="CanvasLayer/Settings/CenterContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../HBoxContainer2/BallSpamCheckBox")
focus_neighbor_bottom = NodePath("../CafeMode")
text = "Back"

[node name="CafeModeSettings" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_domyd")

[node name="Panel" type="Panel" parent="CanvasLayer/CafeModeSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/CafeModeSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CafeModeSettings/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="PrizeAmount" type="Label" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "5/5"

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="PrizeNameTextEdit" type="TextEdit" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 20)
layout_mode = 2
theme = ExtResource("3_p3rro")
placeholder_text = "Prize"
scroll_fit_content_height = true
caret_multiple = false
text_direction = 1

[node name="PrizePointsAmountSpinBox" type="SpinBox" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 50.0
max_value = 500.0
value = 50.0
alignment = 1

[node name="CafeModeAddPrizeBtn" type="Button" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add prize"

[node name="VSplitContainer" type="VSplitContainer" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="PrizeList" type="VBoxContainer" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
theme_override_constants/separation = 45

[node name="CafeModeBackBtn" type="Button" parent="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 8
text = "Back"

[node name="BoardSelect" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/BoardSelect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -123.0
offset_top = -166.0
offset_right = 123.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 2
text = "Select a board"
label_settings = SubResource("LabelSettings_gtnvp")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/BoardSelect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/BoardSelect/CenterContainer"]
layout_mode = 2

[node name="TopMenu" type="HBoxContainer" parent="CanvasLayer/BoardSelect/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="GameSettingsBtn" type="Button" parent="CanvasLayer/BoardSelect/CenterContainer/VBoxContainer/TopMenu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../BoardSelectBack")
focus_neighbor_right = NodePath("../BoardSelectBack")
text = "Game settings"

[node name="BoardSelectBack" type="Button" parent="CanvasLayer/BoardSelect/CenterContainer/VBoxContainer/TopMenu"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../GameSettingsBtn")
focus_neighbor_right = NodePath("../GameSettingsBtn")
text = "Cancel"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/BoardSelect/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="GameSettings" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4564u")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameSettings/CenterContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="BallCountSlider" type="HSlider" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(125, 30)
layout_mode = 2
focus_neighbor_top = NodePath("../../TopMenu/GameSettings_Back2")
focus_neighbor_bottom = NodePath("../../TopMenu/SaveGameSettings_Btn")
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 1
ticks_on_borders = true

[node name="HSplitContainer" type="HSplitContainer" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="BallsLabel" type="Label" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Balls x10"
horizontal_alignment = 1

[node name="TopMenu" type="HBoxContainer" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveGameSettings_Btn" type="Button" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/TopMenu"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_left = NodePath("../GameSettings_Back2")
focus_neighbor_top = NodePath("../../HBoxContainer/BallCountSlider")
focus_neighbor_right = NodePath("../GameSettings_Back2")
focus_neighbor_bottom = NodePath("../GameSettings_Back2")
text = "Save changes"

[node name="GameSettings_Back2" type="Button" parent="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/TopMenu"]
layout_mode = 2
focus_neighbor_left = NodePath("../SaveGameSettings_Btn")
focus_neighbor_top = NodePath("../../HBoxContainer/BallCountSlider")
focus_neighbor_right = NodePath("../SaveGameSettings_Btn")
focus_neighbor_bottom = NodePath("../../HBoxContainer/BallCountSlider")
text = "Back"

[node name="ConfirmBox" parent="CanvasLayer/GameSettings" instance=ExtResource("3_qs0y1")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Transition" parent="CanvasLayer" instance=ExtResource("2_4matt")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1
animation = "Fade"

[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/Menu/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/Menu/LinkButton/Logo" to="." method="_on_logo_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/Menu/LinkButton/Logo" to="." method="_on_logo_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/VBoxContainer/SetupPrizes" to="." method="_on_setup_prizes_pressed"]
[connection signal="toggled" from="CanvasLayer/Settings/CenterContainer/VBoxContainer/CafeMode" to="." method="_on_cafe_mode_toggled"]
[connection signal="toggled" from="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer/FullscreenCheckBox" to="." method="_on_check_box_toggled"]
[connection signal="toggled" from="CanvasLayer/Settings/CenterContainer/VBoxContainer/HBoxContainer2/BallSpamCheckBox" to="." method="_on_ball_spam_check_box_toggled"]
[connection signal="pressed" from="CanvasLayer/Settings/CenterContainer/VBoxContainer/Back" to="." method="_on_settings_back_pressed"]
[connection signal="pressed" from="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/HBoxContainer/CafeModeAddPrizeBtn" to="CanvasLayer/CafeModeSettings" method="_create_prize"]
[connection signal="pressed" from="CanvasLayer/CafeModeSettings/CenterContainer/VBoxContainer/CafeModeBackBtn" to="." method="_CafeModePrizeSettingsBack_btn"]
[connection signal="pressed" from="CanvasLayer/BoardSelect/CenterContainer/VBoxContainer/TopMenu/GameSettingsBtn" to="." method="_on_game_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/BoardSelect/CenterContainer/VBoxContainer/TopMenu/BoardSelectBack" to="." method="_on_board_select_back_pressed"]
[connection signal="value_changed" from="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/HBoxContainer/BallCountSlider" to="CanvasLayer/GameSettings" method="_on_ball_count_slider_value_changed"]
[connection signal="pressed" from="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/TopMenu/SaveGameSettings_Btn" to="." method="_on_save_game_settings_btn_pressed"]
[connection signal="pressed" from="CanvasLayer/GameSettings/CenterContainer/VBoxContainer/TopMenu/GameSettings_Back2" to="." method="_on_game_settings_back_pressed"]
[connection signal="Confirm" from="CanvasLayer/GameSettings/ConfirmBox" to="." method="_on_confirm_box_confirm"]
